# TIPE

./: .gitignore  Fiche-suivi-TIPE-MPI.odt  GroupeNominal.txt  Liste_determinants.txt  Liste_pronom_personnel_sujet.txt  ModelTempHouse.c  README.md  TestSimple.c  data.csv  exploitData.py  exploitTest.py  francais.txt  main.tex  mcot.md  presentation.tex  syntax_tree.tex  test  test.csv  trie_memory_space.cmi  trie_memory_space.cmo  trie_memory_space.cmx  trie_memory_space.ml
TIPE/: TIPE.opam  dune-project  test  test.c
TIPE/Exploitation/: exploitData.py
TIPE/Model/: ModelTemp.c  ModelTempHouse.c  data.csv  structures.c  structures.h  test
TIPE/Presentation/: TIPE.tex
TIPE/StructuresDonnees/: listeChainee.c  listeChainee.h  table_hachage.c  table_hachage.h
TIPE/_build/: .db  .digest-db  log
TIPE/_build/default/: TIPE.dune-package  TIPE.install
TIPE/_build/default/.dune/: configurator  configurator.v2
TIPE/_build/default/lib/: TIPE.cma  TIPE.cmxa  TIPE.cmxs
TIPE/_build/default/lib/.merlin-conf/: lib-TIPE
TIPE/_build/default/ml/: token.ml  trie.ml  utility.ml
TIPE/_build/default/ml/.main.eobjs/: dune__exe.ml-gen  dune__exe__Dictionnary.impl.d  dune__exe__Grammar.impl.d  dune__exe__Main.impl.d  dune__exe__Main.intf.d  dune__exe__Token.impl.all-deps  dune__exe__Token.impl.d  dune__exe__Trie.impl.d  (+2 more)
TIPE/dictionnarys/: Liste_adjectifs.txt  Liste_determinants.txt  Liste_nom_communs.txt  Liste_pronom_personnel_sujet.txt  francais.txt  temp2.txt  test.txt
TIPE/lib/: dune
TIPE/ml/: grammar.ml
TIPE/results/: output.txt  result.tex
TIPE/test/: dune
(+184 files in other folders)
